# judgeflow

./: .gitignore  LICENSE  README.md  download_mini_datasets.py  implementation-plan.md  plot_calibration_curve.py  pyproject.toml  requirements.txt  scores.csv
.deepeval/: .deepeval  .deepeval_telemetry.txt
judgeflow/: llm.py  metrics.py  pyproject.toml
metrics/: coherence.yaml  factuality.yaml  fairness_gender.yaml  privacy_piileak.yaml  reasoning.yaml  toxicity.yaml
src/judgeflow/: __init__.py  cli.py  llm.py  metrics.py  models.py  rai_helpers.py  runner.py  view_results.py
src/judgeflow/metrics/: calibration_gap.yaml  coherence.yaml  factuality.yaml  fairness_calib_gap.yaml  fairness_dp.yaml  fairness_eo.yaml  fairness_gender.yaml  privacy_piileak.yaml  reasoning.yaml  toxicity.yaml
src/judgeflow/tests/data/: test_dataset.py
