[tool.poetry]
name = "judgeflow"
version = "0.1.0"
description = ""
authors = ["keithtyser <keithtyser@gmail.com>"]
readme = "README.md"
packages = [{include = "judgeflow", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.30.1"
pydantic = "^2.7.1"
sqlmodel = "^0.0.18"
langchain = "^0.2.0"
deepeval = "^0.21.43"
evaluate = "^0.4.2"
fairlearn = "^0.12.0"
aequitas = "^0.42.0"
spacy = "^3.7.5"
scikit-learn = "^1.5.0"
pdfkit = "^1.0.0"
streamlit = "^1.35.0"
celery = "^5.4.0"
redis = "^5.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
